Fixed Success stories page glitch on mobile view and content editable fix for authorization

--- a/Star Website First draft/css/success.css
+++ b/Star Website First draft/css/success.css
@@ -67,3 +67,19 @@
     border-radius: 0px;
     margin-bottom: 10px;
 }
+
+
+/* Media Queries  @media screen and (min-width:768px) and (max-width:990px) */
+@media screen and (max-width:990px){
+    
+    .successStories-section{
+    width: 100%;
+    padding: 50px 1vw;
+    display: grid;
+    /* grid-template-columns: repeat(3, 1fr); //This causes issues in mobile mode where it overflows the page */
+    grid-gap: 100px;
+}
+    
+    
+    
+}
